--- a/Encryption Project/HTML/Mainpage.html
+++ b/Encryption Project/HTML/Mainpage.html
@@ -5,7 +5,7 @@
 
 	<title>Secret Message</title>
 
-	<link rel="stylesheet" type="text/css" href="D:\SoftwareDev\Encryption Project\CSS\Mainpage.css">
+	<link rel="stylesheet" type="text/css" href="EncryptionProject/Encryption Project/CSS/Mainpage.css">
 </head>
 <body>
 	<header>Encrypt Messages</header>
@@ -62,8 +62,8 @@
 	<p class="Fmessage">The decrypted message will appear here</p>
 	<p class="PMessage" id="DDMessage"></p>
 
-	<script src="D:\SoftwareDev\Encryption Project\JAVA\Mainpage.js" type="text/javascript"></script>
-	<script src="D:\SoftwareDev\Encryption Project\JAVA\Mainpage2.js" type="text/javascript"></script>
+	<script src="EncryptionProject/Encryption Project/JAVA/Mainpage.js" type="text/javascript"></script>
+	<script src="EncryptionProject/Encryption Project/JAVA/Mainpage2.js" type="text/javascript"></script>
 	<footer>Max Taylor 2021</footer>
 </body>
 </html>
